--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,10 +14,10 @@
         </li>
        
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <div class="col-xs-12 col-sm-12 col-md-6">
+        <app-form-search></app-form-search>
+      </div>
+      
       <ul class="navbar-nav navbar-right">
         <li class="nav-item active">
             <a class="nav-link" href="#">GoogleLogIn<span class="sr-only"></span></a>
