listo infinite scroll y detalles de personajes

--- a/src/app/components/character-list/character-list.component.html
+++ b/src/app/components/character-list/character-list.component.html
@@ -1,24 +1,14 @@
-<p>character-list works!</p>
-<div class="row">
+
+<div class="row" infinite-scroll (scrolled) = "onScrollDowm()">
     <div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let character of characters">
-        <div class="card">
-            <div class="image">
-                <a [routerLink] = "['/character-details', character.id]">
-                    <img [src] ="character.image" [alt]= "character.name">
-                </a>
-            </div>
-            <div class = "card-inner">
-                <div class="header">
-                    <a [routerLink] ="['character-details', character.id]">
-                        <h2>{{character.name}}</h2>
-                    </a>
-                    <h4 class = "text-muted">{{character.gender}}</h4>
-                    <small class = "text-muted">{{character.created}}</small>
-                </div>
-            </div>
-        </div>
+        <app-character [character] = "character"></app-character>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-12 mt-5 container-notFound"  *ngIf = "characters.length <= 0">
         <p>No Results...</p>
+
     </div>
 </div>
+<button
+ class = "btn"
+ [ngClass] = "'no hidden'"
+ (click) = "onScrollTop()">Go Up</button>
