--- a/src/app/components/form-search/form-search.component.html
+++ b/src/app/components/form-search/form-search.component.html
@@ -4,7 +4,8 @@ autofocus
 type="text"
 class="form-control-lg" 
 placeholder="Search..."
-(keyup) ="onSearch(inputSearch.value)">
+(keyup) ="onSearch(inputSearch.value)"
+>
 
-<button type="button" class="btn btn-primary">Buscar</button>
+<button type="button" class="btn btn-primary" (click) ="search()">Buscar</button>
 
