--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="#">Rick and Morty</a>
+    
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -20,7 +18,7 @@
       
       <ul class="navbar-nav navbar-right">
         <li class="nav-item active">
-            <a class="nav-link" href="#">GoogleLogIn<span class="sr-only"></span></a>
+            <button class="btn btn-success" (click) = "logInWithGoogle()">GoogleLogIn<span class="sr-only"></span></button>
         </li>
       </ul>
       
