home page falta boton favoritos

--- a/src/app/components/character/character.component.html
+++ b/src/app/components/character/character.component.html
@@ -14,4 +14,11 @@
             <small class = "text-muted">{{character.created | date}}</small>
         </div>
     </div>
+    <button >
+        {{isAuthenticated}}
+        <input type="checkbox" checked autocomplete="off">
+    </button>
+    
+
+
 </div>
