--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,5 +47,7 @@
         </ul>
     </nav>
 
-    <app-character-list></app-character-list>
+    <app-character-list 
+    [isAuthenticated] = "isAuthenticated"
+    [user] = "user"></app-character-list>
 </div>
